--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <title>Build v0.0.1</title>
-    <link rel="stylesheet" href="dist/css/styles.css" type="text/css" media="all">
+    <link rel="stylesheet" href="../dist/css/styles.css" type="text/css" media="all">
   </head>
 
   <body>
@@ -13,8 +13,8 @@
 
     </div>
 
-    <script src="dist/js/jquery.min.js"></script>
-    <script src="dist/js/main.min.js"></script>
+    <script src="../dist/js/jquery.min.js"></script>
+    <script src="../dist/js/main.min.js"></script>
   </body>
 
 </html>
