--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 
   <head>
-    <title>Build v0.0.1</title>
-    <link rel="stylesheet" href="../dist/css/styles.css" type="text/css" media="all">
+    <title>Sparkle</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" media="all">
   </head>
 
   <body>
@@ -13,8 +13,8 @@
 
     </div>
 
-    <script src="../dist/js/jquery.min.js"></script>
-    <script src="../dist/js/main.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="main.min.js"></script>
   </body>
 
 </html>
